<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="kltuk.com.agroterra.activities.FormActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_weeds" />

        <EditText
            android:id="@+id/form_count_weeds"
            style="@style/EditTextStyle"
            android:digits="0123456789"
            android:hint="0"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/field_area" />

        <EditText
            android:id="@+id/form_field_area"
            style="@style/EditTextStyle"
            android:digits="0123456789."
            android:hint="0"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_count_weeds" />

        <TextView
            android:id="@+id/form_total_count_weeds"
            style="@style/TextViewStyle"
            android:hint="0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/comment" />

        <EditText
            android:id="@+id/form_comment"
            style="@style/EditTextStyle"
            android:layout_height="60dp"
            android:gravity="top"
            android:hint="-"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/field_id" />

        <TextView
            android:id="@+id/form_field_id"
            style="@style/TextViewStyle"
            android:text="0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calture" />

        <TextView
            android:id="@+id/form_calture"
            style="@style/TextViewStyle"
            android:layout_width="match_parent" />

        <Button
            android:id="@+id/form_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/data_send" />

    </LinearLayout>

</ScrollView>
